--- a/front/src/pages/navbar/navbar.css
+++ b/front/src/pages/navbar/navbar.css
@@ -64,5 +64,7 @@ a.nav-link {
     font-size: 1.2em !important;
     padding-top: 8px;
     padding-bottom: 0;
+    margin-left: 15px;
+    margin-right: 15px;
 
 }
